--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React Simple Calendar</title>
+  <title>React Simplest Calendar</title>
   <script type="module" src="index.tsx"></script>
 </head>
 
